--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -21,6 +21,7 @@
           [label]="'Session erstellen'"
           [iconName]="IconName.Activity"
           [iconBackgroundColor]="IconBackgroundColor.DodgerBlue"
+          (click)="createNewSession()"
         />
       </div>
     } @else if (filteredTrainingPlans().length === 0) {
