Add basic info modal for training session vs plan explanation

--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -23,6 +23,12 @@
           [iconBackgroundColor]="IconBackgroundColor.DodgerBlue"
           (click)="createNewSession()"
         />
+        <app-icon-list-item
+          [label]="'Trainingsplan vs Session'"
+          [iconName]="IconName.INFO"
+          [iconBackgroundColor]="IconBackgroundColor.LimeGreen"
+          (click)="openTrainingTypeExplanation()"
+        />
       </div>
     } @else if (filteredTrainingPlans().length === 0) {
       <app-alert alertText="Keine deiner bestehenden Trainingpläne passen zu dieser Suchanfrage!" />
