Add training routine module all routes + mappings

--- a/client/src/app/shared/components/training-banner/training-banner.component.html
+++ b/client/src/app/shared/components/training-banner/training-banner.component.html
@@ -8,7 +8,7 @@
     output="base64"
   />
 } @else {
-  <img [src]="imageSrc()" alt="Cover Placeholder" id="cover-image" />
+  <img [src]="imageSrc() || placeHolderImage" alt="Cover Placeholder" id="cover-image" />
 }
 
 <div class="button-container">
