--- a/client/src/app/shared/components/input/input.component.html
+++ b/client/src/app/shared/components/input/input.component.html
@@ -7,7 +7,7 @@
       class="transparent-input"
       [name]="name()"
       [placeholder]="placeholder()"
-      [value]="value()"
+      [(value)]="value"
     />
   }
 
@@ -19,7 +19,7 @@
       class="transparent-input"
       [name]="name()"
       [placeholder]="placeholder()"
-      [value]="value()"
+      [(value)]="value"
     />
   }
 
@@ -31,7 +31,7 @@
       class="transparent-input"
       [name]="name()"
       [placeholder]="placeholder()"
-      [value]="value()"
+      [(value)]="value"
     />
   }
 
@@ -43,7 +43,7 @@
       class="transparent-input"
       [name]="name()"
       [placeholder]="placeholder()"
-      [value]="value()"
+      [(value)]="value"
     />
   }
 }
