--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -25,7 +25,7 @@
       <tbody>
         @for (k of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]; track k; let i = $index) {
           @let exercise =
-            trainingDataService.trainingDay()!.exercises[i] || {
+            trainingDataService.trainingDay()!.exercises[i] ?? {
               category: '',
               exercise: '',
               sets: '',
@@ -77,16 +77,15 @@
             </td>
             <td class="weight-data-cell" data-cell="Weight">
               @let weightRecommandation = trainingDataService.weightRecommendations[i];
-              <app-input
-                class="weight"
-                [placeholder]="weightRecommandation ?? ''"
-                [type]="'tel'"
-                [name]="namePrefix + 'weight'"
-                [directiveUsed]="'weightInputDirective'"
-                [(value)]="exercise.weight"
-              />
-
-   
+              <input
+              [id]="exercise._id ?? ''"
+              weightInput
+              type="tel"
+              class="transparent-input weight"
+              [name]="namePrefix + 'weight'"
+              [placeholder]="trainingDataService.weightRecommendations[i] ?? ''"
+              [(value)]="exercise.weight"
+            />
             </td>
             <td data-cell="RPE">
               <app-input
