Remove unused css in training view table

--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -1,7 +1,7 @@
 @if (viewInitialized()) {
   <form id="form">
     <table
-      class="table table-striped training-table responsive-table caption-top mb-4"
+      class="table table-striped"
       appSwipe
       [swipeLeft]="swipeLeft"
       [swipeRight]="swipeRight"
