Add own close button for modal

--- a/client/src/app/shared/components/modal/modal.component.html
+++ b/client/src/app/shared/components/modal/modal.component.html
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">{{ title }}</h5>
-        <button type="button" class="btn-close" aria-label="Close" (click)="close()"></button>
+        <app-circular-icon-button [icon]="IconName.X"  (click)="close()" />
       </div>
       <div class="modal-body">
         <ng-template #modalContent></ng-template>
