--- a/client/src/app/shared/components/dropdown/dropdown.component.scss
+++ b/client/src/app/shared/components/dropdown/dropdown.component.scss
@@ -1,3 +1,8 @@
+:host {
+  display: flex;
+  align-items: flex-start;
+}
+
 .transparent-input {
   border: none;
   background-color: transparent;
@@ -23,4 +28,8 @@ input[type='number']::-webkit-inner-spin-button {
 /* Remove up and down arrows in IE10+ */
 input[type='number'] {
   -ms-appearance: textfield;
+}
+
+.transparent-input option {
+  text-align: left; /* Text in den Optionen linksbündig ausrichten */
 }
