--- a/client/src/app/shared/components/toast/toast.component.scss
+++ b/client/src/app/shared/components/toast/toast.component.scss
@@ -9,6 +9,7 @@
   z-index: 1055;
 }
 
+
 .toast {
   color: #fff;
   background: #424242;
@@ -29,6 +30,7 @@
   white-space: nowrap;
 }
 
+
 .toast.error {
   background: red;
 
@@ -47,17 +49,11 @@
 
 .toast .message {
   display: flex;
-  align-items: center;
   gap: 1.5rem;
-  margin: 0;
-  color: #e0e0e0;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .toast .info {
-  color: #90caf9;
+  color: #dbdbdb;
   flex-shrink: 0;
   text-decoration: none;
 }
