--- a/client/src/app/shared/components/toast/toast.component.html
+++ b/client/src/app/shared/components/toast/toast.component.html
@@ -1,14 +1,14 @@
 @if (toastService.currentToast; as toast) {
   @let warningToast = toast.status === ToastStatus.ERROR;
 
-  <div class="toast" [ngClass]="{ error: warningToast }" [class.active]="true" role="alert">
+  <div class="toast" [ngClass]="{ error: warningToast, active: toastService.toastIsActive }" [class.active]="true" role="alert">
     <div class="message">
       @if (toast.status === ToastStatus.ERROR) {
         <app-icon [name]="IconName.AlertTriangle" />
       } @else if (toast.status === ToastStatus.ACHIEVEMENT) {
         <app-icon [name]="IconName.AWARD" [color]="'#90caf9'" />
       } @else  {
-        <app-icon [name]="IconName.AWARD" [color]="'#FFD700 '" />
+        <app-icon [name]="IconName.INFO" [color]="'#FFD700 '" />
       }
       <span class="info">{{ toast.text }}</span>
     </div>
