--- a/client/src/app/shared/components/button/button.component.scss
+++ b/client/src/app/shared/components/button/button.component.scss
@@ -5,6 +5,9 @@
   border: none;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  display: flex;
+  align-items: center;
+
 
   gap: 0.5rem;
 }
