--- a/client/src/app/features/training-logs/training-logs.component.html
+++ b/client/src/app/features/training-logs/training-logs.component.html
@@ -4,7 +4,7 @@
       [alertText]="
         'Sobald du deine ersten Trainings absolviert hast, werden sie hier angezeigt! Deine Fortschritte werden automatisch dokumentiert und du erhältst hier eine umfassende Übersicht über deine Leistungen.'
       "
-      [alertType]="'light'"
+      [alertType]="'primary'"
     />
   } @else {
     <app-search-bar [(searchQuery)]="searchQuery" />
@@ -26,3 +26,5 @@
     }
   </div>
 }
+
+<app-training-log-calendar />
