--- a/client/src/app/features/training-logs/training-log-calendar/training-log-calendar.component.html
+++ b/client/src/app/features/training-logs/training-log-calendar/training-log-calendar.component.html
@@ -1,27 +1,31 @@
-      <!-- Wochentage -->
-      <div class="day-name">Mo</div>
-      <div class="day-name">Di</div>
-      <div class="day-name">Mi</div>
-      <div class="day-name">Do</div>
-      <div class="day-name">Fr</div>
-      <div class="day-name">Sa</div>
-      <div class="day-name">So</div>
-      <!-- Nummerierte Tage des Monats -->
+<!-- Wochentage -->
+<div class="calendar-grid">
+  <div class="day-name">Mo</div>
+  <div class="day-name">Di</div>
+  <div class="day-name">Mi</div>
+  <div class="day-name">Do</div>
+  <div class="day-name">Fr</div>
+  <div class="day-name">Sa</div>
+  <div class="day-name">So</div>
+  <!-- Nummerierte Tage des Monats -->
 
-      @for (day of daysFromPreviousMonth(); track day) {
-        <div class="day other-month">
-            <div class="day-number">{{ day }}</div>
-        </div>
-      }
+  @for (day of daysFromPreviousMonth(); track day) {
+    <div class="day other-month">
+      <div class="day-number">{{ day }}</div>
+    </div>
+  }
 
-      @for (day of daysInMonth(); track day) {
-        <div class="day">
-            <div class="day-number" [ngClass]="{'current-day': day === currentDay()}">{{ day }}</div>
-          </div>
-      }
+  @for (day of daysInMonth(); track day) {
+    <div class="day">
+      <div class="day-number" [ngClass]="{ 'current-day': day === currentDay() }">{{ day }}</div>
+    </div>
+  }
 
-      @for (day of daysFromNextMonth(); track day) {
-        <div class="day other-month">
-            <div class="day-number">{{ day }}</div>
-        </div>
-}
+  @for (day of daysFromNextMonth(); track day) {
+    <div class="day other-month">
+      <div class="day-number">{{ day }}</div>
+    </div>
+  }
+</div>
+
+<app-month-navigation />
