Allow correct display of month status

--- a/client/src/app/features/training-logs/training-log-calendar/month-navigation/month-navigation.component.html
+++ b/client/src/app/features/training-logs/training-log-calendar/month-navigation/month-navigation.component.html
@@ -1,2 +1,3 @@
 <app-icon [name]="IconName.CHEVRON_LEFT" [size]="24" (click)="goToPreviousMonth()" />
+{{ currentMonthName() }}
 <app-icon [name]="IconName.CHEVRON_RIGHT" [size]="24" (click)="goToNextMonth()" />
