--- a/client/src/app/features/training-logs/training-log-calendar/month-navigation/month-navigation.component.scss
+++ b/client/src/app/features/training-logs/training-log-calendar/month-navigation/month-navigation.component.scss
@@ -1,22 +1,10 @@
 :host {
   display: flex;
   justify-content: flex-end;
+  min-width: 125px;
   align-items: center;
   gap: 10px;
   width: 100%;
   color: grey;
-}
-
-.nav-btn {
-  background: none;
-  border: none;
-  cursor: pointer;
-  padding: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  &:hover {
-    opacity: 0.8;
-  }
+  padding-block: 0.5rem;
 }
