--- a/client/src/app/features/training-logs/training-log-calendar/training-log-calendar.component.html
+++ b/client/src/app/features/training-logs/training-log-calendar/training-log-calendar.component.html
@@ -1,4 +1,3 @@
-<!-- Wochentage -->
 <div class="calendar-grid">
   <div class="day-name">Mo</div>
   <div class="day-name">Di</div>
@@ -7,7 +6,6 @@
   <div class="day-name">Fr</div>
   <div class="day-name">Sa</div>
   <div class="day-name">So</div>
-  <!-- Nummerierte Tage des Monats -->
 
   @for (day of daysFromPreviousMonth(); track day) {
     <div class="day other-month">
@@ -17,7 +15,9 @@
 
   @for (day of daysInMonth(); track day) {
     <div class="day">
-      <div class="day-number" [ngClass]="{ 'current-day': day === currentDay() }">{{ day }}</div>
+      <div class="day-number" [ngClass]="{ 'current-day': day | isCurrentDay: currentMonth() : currentYear() }">
+        {{ day }}
+      </div>
     </div>
   }
 
