--- a/client/src/app/features/training-logs/training-log-calendar/month-navigation/month-navigation.component.html
+++ b/client/src/app/features/training-logs/training-log-calendar/month-navigation/month-navigation.component.html
@@ -1,3 +1,8 @@
-<app-icon [name]="IconName.CHEVRON_LEFT" [size]="24" (click)="goToPreviousMonth()" />
-{{ currentMonthName() }}
-<app-icon [name]="IconName.CHEVRON_RIGHT" [size]="24" (click)="goToNextMonth()" />
+<h4>
+  <!-- {{ currentMonthName() }} -->
+</h4>
+
+<div class="month-navigation">
+  <app-circular-icon-button [icon]="IconName.CHEVRON_LEFT" (click)="goToPreviousMonth()" />
+  <app-circular-icon-button [icon]="IconName.CHEVRON_RIGHT" (click)="goToNextMonth()" />
+</div>
