--- a/client/src/app/features/training-logs/training-log-calendar/month-navigation/month-navigation.component.scss
+++ b/client/src/app/features/training-logs/training-log-calendar/month-navigation/month-navigation.component.scss
@@ -1,10 +1,13 @@
 :host {
   display: flex;
-  justify-content: flex-end;
-  min-width: 125px;
+  justify-content: space-between;
   align-items: center;
-  gap: 10px;
   width: 100%;
-  color: grey;
   padding-block: 0.5rem;
+  color: #505050;
+}
+
+.month-navigation {
+  display: flex;
+  gap: 0.75rem;
 }
