Handle year overflow

--- a/client/src/app/features/training-logs/training-log-calendar/training-log-calendar.component.html
+++ b/client/src/app/features/training-logs/training-log-calendar/training-log-calendar.component.html
@@ -28,4 +28,4 @@
   }
 </div>
 
-<app-month-navigation [(currentMonth)]="currentMonth" />
+<app-month-navigation [(currentMonth)]="currentMonth" [(currentYear)]="currentYear" />
