--- a/client/src/app/features/training-logs/training-logs.component.html
+++ b/client/src/app/features/training-logs/training-logs.component.html
@@ -21,4 +21,4 @@
   </div>
 }
 
-<app-training-log-calendar [(currentMonth)]="currentMonth" />
+<app-training-log-calendar [(currentMonth)]="currentMonth" [(currentYear)]="currentYear" />
