--- a/client/src/app/features/training-logs/training-log-calendar/month-navigation/month-navigation.component.scss
+++ b/client/src/app/features/training-logs/training-log-calendar/month-navigation/month-navigation.component.scss
@@ -1,13 +1,10 @@
 :host {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
+  gap: 0.75rem;
+
   width: 100%;
   padding-block: 0.5rem;
   color: #505050;
-}
-
-.month-navigation {
-  display: flex;
-  gap: 0.75rem;
 }
