--- a/client/src/app/features/training-logs/training-log-calendar/training-log-calendar.component.scss
+++ b/client/src/app/features/training-logs/training-log-calendar/training-log-calendar.component.scss
@@ -13,9 +13,10 @@
 
 .day {
   position: relative;
-  padding: 15px;
+  padding: 5px;
   border-bottom: 1px solid #e0e0e0;
   border-right: 1px solid #e0e0e0;
+
   min-height: 7rem;
   box-sizing: border-box;
   display: flex;
@@ -65,4 +66,16 @@
   justify-content: flex-end;
   align-items: flex-end;
   width: 100%;
+}
+
+.calendar-event {
+  background-color: mediumaquamarine;
+  color: white;
+  border: 1px solid #ddd;
+  font-size: smaller;
+  border-radius: 8px;
+  display: grid;
+  place-items: center;
+  position: relative;
+  top: 30px;
 }
