--- a/client/src/app/shared/components/button/button.component.scss
+++ b/client/src/app/shared/components/button/button.component.scss
@@ -7,9 +7,8 @@
   transition: background-color 0.3s ease;
   display: flex;
   align-items: center;
-
-
-  gap: 0.5rem;
+  justify-content: center;
+  gap: 1rem;
 }
 
 .btn-primary {
