--- a/client/src/app/shared/components/icon-list-item/icon-list-item.component.scss
+++ b/client/src/app/shared/components/icon-list-item/icon-list-item.component.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.75em 0.5em;
-  background-color: rgb(243, 239, 239);
+  background-color: var(--element-background);
   border-radius: 0.8em;
 
   transition: background-color 0.2s ease;
