Finished dashboard card

--- a/client/src/app/features/profile-2/profile.component.html
+++ b/client/src/app/features/profile-2/profile.component.html
@@ -27,7 +27,7 @@
       [icon]="IconName.Activity"
       [unit]="'23'"
       [differenceFromLastSession]="2.3"
-      [title]="'Test'"
+      [title]="'Distance (Mil)'"
       [explanationText]="'Improvement'"
     />
   } @else {
