--- a/client/src/app/shared/components/dashboard-card/dashboard-card.component.html
+++ b/client/src/app/shared/components/dashboard-card/dashboard-card.component.html
@@ -1,20 +1,26 @@
-<div class="icon">
-  <app-icon-with-backdrop-color [icon]="icon()" [iconColor]="IconBackgroundColor.DodgerBlue" />
-</div>
 <div class="stat-content">
   <h4>{{ title() }}</h4>
-  <p class="value">{{ differenceFromLastSession() }} {{ unit() }}</p>
+  <p class="value">{{ unit() }}</p>
 
   @if (isPositiveTrend()) {
-    <div class="change positive">
-      {{ differenceFromLastSession() }}
-      <app-icon [name]="IconName.TRENDING_UP" />
+    <div class="trend-container positive">
+      <div class="trend-info">
+        <app-icon [name]="IconName.TRENDING_UP" />
+        {{ differenceFromLastSession() }}
+      </div>
+
       <small>{{ explanationText() }}</small>
     </div>
   } @else {
-    <div class="change negative">
-      <app-icon [name]="IconName.TRENDING_DOWN" />
+    <div class="trend-container negative">
+      <div class="trend-info">
+        <app-icon [name]="IconName.TRENDING_DOWN" />
+        {{ differenceFromLastSession() }}
+      </div>
+
       <small>{{ explanationText() }}</small>
     </div>
   }
 </div>
+
+<app-icon-with-backdrop-color [icon]="icon()" [iconColor]="IconBackgroundColor.DodgerBlue" />
