--- a/client/src/app/shared/components/dashboard-card/dashboard-card.component.scss
+++ b/client/src/app/shared/components/dashboard-card/dashboard-card.component.scss
@@ -1,30 +1,41 @@
 :host {
   display: flex;
-  padding: 16px;
+  padding-inline: 1.5rem;
+  padding-block: 1rem;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   background-color: var(--element-background);
-}
-
-.icon {
-  margin-right: 16px;
-  font-size: 32px;
 }
 
 .stat-content {
   flex: 1;
 }
 
+h4 {
+  font-size: 15px;
+  font-weight: normal;
+}
+
 .value {
   font-size: 28px;
+  letter-spacing: 2.5px;
   font-weight: bold;
 }
 
-.change {
-  margin-top: 8px;
+.trend-container {
   font-size: 16px;
   display: flex;
   align-items: center;
+  gap: 0.75rem;
+
+  .trend-info {
+    display: flex;
+    gap: 0.35rem;
+  }
+
+  small {
+    color: rgb(94, 94, 94);
+  }
 }
 
 .positive {
