--- a/client/src/app/shared/components/icon-with-backdrop-color/icon-with-backdrop-color.component.html
+++ b/client/src/app/shared/components/icon-with-backdrop-color/icon-with-backdrop-color.component.html
@@ -1,3 +1,3 @@
 <div class="icon-container" [ngStyle]="{ '--icon-bg-color': iconBackgroundColor() }">
-  <app-icon [name]="icon()" [color]="iconColor()" [fillIcon]="true" />
+  <app-icon [name]="icon()" [color]="iconColor()" [size]="21" [fillIcon]="true" />
 </div>
