Open bar chart popup in calendar

--- a/client/src/app/features/training-logs/training-log-calendar/training-log-calendar.component.html
+++ b/client/src/app/features/training-logs/training-log-calendar/training-log-calendar.component.html
@@ -18,7 +18,7 @@
       <div class="day-number" [ngClass]="{ 'current-day': day | isCurrentDay: currentMonth() : currentYear() }">
         {{ day }}
       </div>
-      <!-- <app-calendar-event [title]="'W1D4'" /> -->
+      <app-calendar-event [title]="'W1D4'" />
     </div>
   }
 
