--- a/client/src/app/shared/components/dashboard-card/dashboard-card.component.scss
+++ b/client/src/app/shared/components/dashboard-card/dashboard-card.component.scss
@@ -1,10 +1,17 @@
 :host {
   display: flex;
-  padding-inline: 1.5rem;
-  padding-block: 1rem;
+  align-items: center;
+  padding: 1rem;
   border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  background-color: var(--element-background);
+  box-shadow: 0 2 4px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgb(243, 243, 243);
+}
+
+.unit-container {
+  display: fleX;
+  gap: 0.75rem;
+  align-items: baseline;
+  justify-content: baseline;
 }
 
 .stat-content {
@@ -31,10 +38,6 @@ h4 {
   .trend-info {
     display: flex;
     gap: 0.35rem;
-  }
-
-  small {
-    color: rgb(94, 94, 94);
   }
 }
 
