Implement display of prospective training days in calendar via pipe

--- a/client/src/app/features/training-logs/training-log-calendar/training-log-calendar.component.html
+++ b/client/src/app/features/training-logs/training-log-calendar/training-log-calendar.component.html
@@ -19,6 +19,10 @@
         <div class="day-number" [ngClass]="{ 'current-day': day | isCurrentDay: currentMonth() : currentYear() }">
           {{ day }}
         </div>
+
+        @if (day | trainingLabel: currentMonth() : currentYear() : trainingDayCalendarData; as trainingLabel) {
+          <app-calendar-event [title]="trainingLabel" />
+        }
       </div>
     }
 
