--- a/client/src/app/features/training-logs/calendar-event/calendar-event.component.scss
+++ b/client/src/app/features/training-logs/calendar-event/calendar-event.component.scss
@@ -1,6 +1,6 @@
 :host {
-  background-color: mediumaquamarine;
-  color: white;
+  background-color: rgb(222, 222, 222);
+  color: rgb(46, 46, 46);
   border: 1px solid #ddd;
   font-size: smaller;
   border-radius: 8px;
