--- a/client/src/app/features/training-logs/training-log-calendar/training-log-calendar.component.html
+++ b/client/src/app/features/training-logs/training-log-calendar/training-log-calendar.component.html
@@ -25,10 +25,10 @@
             | extractTrainingDayFromCalendarData
               : currentMonth()
               : currentYear()
-              : trainingDayCalendarData.upComingTrainings;
+              : trainingDayCalendarData.finishedTrainings;
           as trainingDayCalendarEntry
         ) {
-          <app-calendar-event [trainingDayCalendarEntry]="trainingDayCalendarEntry" />
+          <app-calendar-event [trainingDayCalendarEntry]="trainingDayCalendarEntry" [isTrainingLog]="true" />
         }
 
         @if (
@@ -36,10 +36,10 @@
             | extractTrainingDayFromCalendarData
               : currentMonth()
               : currentYear()
-              : trainingDayCalendarData.finishedTrainings;
+              : trainingDayCalendarData.upComingTrainings;
           as trainingDayCalendarEntry
         ) {
-          <app-calendar-event [trainingDayCalendarEntry]="trainingDayCalendarEntry" />
+          <app-calendar-event [trainingDayCalendarEntry]="trainingDayCalendarEntry" [isTrainingLog]="false" />
         }
       </div>
     }
