--- a/client/src/app/features/training-logs/calendar-event/calendar-event.component.scss
+++ b/client/src/app/features/training-logs/calendar-event/calendar-event.component.scss
@@ -1,11 +1,29 @@
 :host {
-  background-color: rgb(222, 222, 222);
   color: rgb(46, 46, 46);
   border: 1px solid #ddd;
-  font-size: smaller;
+  font-size: 0.925em;
   border-radius: 8px;
-  display: grid;
-  place-items: center;
+  padding: 0.25em 0.5em;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); // Ein weicher Schatten-Effekt
+  display: flex;
+  align-items: flex-start;
+  gap: 5px;
   position: relative;
   top: 30px;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+app-icon {
+  transform: translateY(1.5px);
+}
+
+@media screen and (max-width: 768px) {
+  :host {
+    flex-direction: column-reverse;
+    align-items: center;
+    transform: unset;
+  }
 }
