Fix redirection to main page if no activity detected

--- a/client/src/app/features/training-logs/calendar-event/calendar-event.component.scss
+++ b/client/src/app/features/training-logs/calendar-event/calendar-event.component.scss
@@ -25,5 +25,6 @@ app-icon {
     flex-direction: column-reverse;
     align-items: center;
     transform: unset;
+    padding-block: 0.45em;
   }
 }
