--- a/client/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/client/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 @for (item of navItems; track item) {
-  <div class="nav-item" (click)="setActive(item.route)" [class.active]="activeRoute() === item.route">
-    <app-icon [name]="item.icon" [size]="24"></app-icon>
+  <div class="nav-item" (click)="setActive(item.route, $event)" [class.active]="activeRoute() === item.route">
+    <app-icon [name]="item.icon" [size]="24" />
     <span class="nav-label">{{ item.label }}</span>
 
     @if (item.route === '/logs') {
