--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -15,18 +15,21 @@
           [label]="'Trainingsplan erstellen'"
           [iconName]="IconName.CALENDAR"
           [iconBackgroundColor]="IconBackgroundColor.MediumSlateBlue"
+          [iconTilting]="wiggleIcons()"
           (click)="createNewPlan()"
         />
         <app-icon-list-item
           [label]="'Session erstellen'"
           [iconName]="IconName.Activity"
           [iconBackgroundColor]="IconBackgroundColor.DodgerBlue"
+          [iconTilting]="wiggleIcons()"
           (click)="createNewSession()"
         />
         <app-icon-list-item
           [label]="'Trainingsplan vs Session'"
           [iconName]="IconName.INFO"
           [iconBackgroundColor]="IconBackgroundColor.LimeGreen"
+          [iconTilting]="wiggleIcons()"
           (click)="openTrainingTypeExplanation()"
         />
       </div>
