--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -9,6 +9,7 @@
   stroke-linecap="round"
   stroke-linejoin="round"
   class="feather feather-{{ name() }}"
+  [ngClass]="{ tilt: isTilting() }"
 >
   @switch (name()) {
     @case (IconName.Activity) {
