--- a/client/src/app/shared/icon/icon.component.scss
+++ b/client/src/app/shared/icon/icon.component.scss
@@ -6,3 +6,23 @@
     cursor: pointer;
   }
 }
+
+@keyframes tilt {
+  0%,
+  100% {
+    transform: rotate(0);
+  }
+  25% {
+    transform: rotate(-15deg);
+  }
+  50% {
+    transform: rotate(15deg);
+  }
+  75% {
+    transform: rotate(-15deg);
+  }
+}
+
+.tilt {
+  animation: tilt 1.5s ease-in-out infinite;
+}
