Introduce new more incomplex spinenr design

--- a/client/src/app/shared/components/spinner/spinner.component.scss
+++ b/client/src/app/shared/components/spinner/spinner.component.scss
@@ -11,31 +11,21 @@
 }
 
 .loader {
-  width: 50px;
-  aspect-ratio: 1;
-  display: grid;
+  width: 48px;
+  height: 48px;
   border-radius: 50%;
-  background:
-    linear-gradient(0deg, rgb(0 0 0/50%) 30%, #0000 0 70%, rgb(0 0 0/100%) 0) 50%/8% 100%,
-    linear-gradient(90deg, rgb(0 0 0/25%) 30%, #0000 0 70%, rgb(0 0 0/75%) 0) 50%/100% 8%;
-  background-repeat: no-repeat;
-  animation: l23 1s infinite steps(12);
+  display: inline-block;
+  border-top: 3px solid rgb(56, 56, 56);
+  border-right: 3px solid transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
 }
-.loader::before,
-.loader::after {
-  content: '';
-  grid-area: 1/1;
-  border-radius: 50%;
-  background: inherit;
-  opacity: 0.915;
-  transform: rotate(30deg);
-}
-.loader::after {
-  opacity: 0.83;
-  transform: rotate(60deg);
-}
-@keyframes l23 {
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
   100% {
-    transform: rotate(1turn);
+    transform: rotate(360deg);
   }
 }
