--- a/client/src/app/features/training-logs/calendar-event/calendar-event.component.scss
+++ b/client/src/app/features/training-logs/calendar-event/calendar-event.component.scss
@@ -4,7 +4,7 @@
   font-size: 0.925em;
   border-radius: 8px;
   padding: 0.25em 0.5em;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); // Ein weicher Schatten-Effekt
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: flex-start;
   gap: 5px;
@@ -25,6 +25,6 @@ app-icon {
     flex-direction: column-reverse;
     align-items: center;
     transform: unset;
-    padding-block: 0.45em;
+    padding: 0.45em 0.2em;
   }
 }
