--- a/client/src/app/shared/components/dashboard-card/dashboard-card.component.scss
+++ b/client/src/app/shared/components/dashboard-card/dashboard-card.component.scss
@@ -1,10 +1,10 @@
 :host {
   display: flex;
   align-items: center;
-  padding: 1rem;
-  border-radius: 8px;
+  padding-top: 0.65rem;
+  padding-bottom: 0.3rem;
   box-shadow: 0 2 4px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgb(243, 243, 243);
+  border-bottom: 1px dashed rgb(225, 225, 225);
 }
 
 .unit-container {
@@ -21,6 +21,7 @@
 h4 {
   font-size: 15px;
   font-weight: normal;
+  margin-bottom: 0.35em;
 }
 
 .value {
@@ -47,4 +48,10 @@ h4 {
 
 .negative {
   color: red;
+}
+
+@media screen and (max-width: 768px) {
+  app-icon-with-backdrop-color {
+    display: none;
+  }
 }
